# drawbot-redux

./: .gitignore  CLAUDE.md  Classes_basics.py  DemoSpreadSheetElement.py  ExampleExtendedText.py  Test.py  TextAssignment_01.py  TypesetterExample.py  anthro.py  license.txt  main.py  pyproject.toml  readme.md  study-imp.py  study-ovf.py  study-pos.py  study-sha.py  study-twi.py  study-typ.py
.claude/agents/: drawbot-designer.md
.claude/output-styles/: drawbot-report-generator.md
.claude/skills/drawbot-designer/: SKILL.md  design-vocabulary.md  examples.md  filters.md  reference.md
.claude/skills/drawbot-designer/templates/: card_layout.py  minimal_poster.py  two_column.py
.claude/skills/evolutionary-forms/: SKILL.md  reference.md  vocabulary.md
archive/experiments/machine/: __init__.py
archive/experiments/test/: study-ani.py  study-day.py  study-img.py  study-mor.py  test.py  test_typography_fix.py
archive/old/: gemini-pro.py  hello.py
archive/old/Lib/pagebot/resources/languages/: __init__.py
archive/old/projects/: Assignment_01.py  DrawBotBasics.py  Python_basics.py  Test.py  TextAssignment.py  TextAssignment_01.py  TypeBasics.py  new.py  requirements.txt
archive/old/projects/Fashion/: SlowFashion.py
archive/old/workshop-0604/: ColorCombinations.py  Untitled 2.py  Untitled.py  lol.py  test.py  working.py  workshop-0604-a.py  workshop-0604-b.py  workshop-0604-c.py  workshop-0604-d.py  workshop-0604-e.py  workshop-0604-f.py  workshop-0604-g.py  workshop-0604-h.py  workshop-0604-i.py
archive/old/workshop-0623/FernDJR/: LICENSE.txt
archive/old/workshop-0623/Image-Pattern-Generator-main/: PatternGeneratorInterface.py  makeImages.py
archive/reports/: barbarian-ai-intelligence-0728.md  barbarian-monthly-ai-intelligence-brief-july2025.md  barbarian_ai_report.py  barbarian_ai_report_complete.py  barbarian_ai_report_expressive.py  barbarian_ai_report_minimal.py  barbarian_ai_report_v2.py  emotional_geometry.py  emotional_geometry_fixed.py  swiss_poster_1959.py
archive/summaries/: AGENT_SKILLS_SETUP.md  CLAUDE_CODE_INTEGRATION.md  FINAL_SUMMARY.md  SKILL_ORGANIZATION_COMPLETE.md
cli/: __init__.py  main.py  spec.py
cli/evolve/: __init__.py  brand_dna.json  contact_sheet.py  evolution.py  genome.py  parameters.py  render.py  translator.py
cli/evolve/generators/: dot_field.py  layered_form.py
docs/: README.md  agent-learning-reference.md  api.md  design-system-usage.md  drawbot-image-filters-reference.md  guide.md  layout-design-principles.md  learning-structure.md  print-production-checklist.md  quickstart.md  typography-style-guide.md
docs/archive/: README.md  type.md
drawBot/context/tools/: gifTools.py
evolutionary_drawbot/: __init__.py  __main__.py  cli.py  contact_sheet.py  evolution.py  genome.py  parameters.py  render.py  translator.py
evolutionary_drawbot/form_generators/: __init__.py  accent_nodes.py  layered_form.py  shape_outline.py  soft_blob.py
examples/: DEBUG_tier_card.py  FIXED_tier_card_example.py  README.md  example_spec.yaml  longitudinalbench_poster_v2.py  longitudinalbench_poster_v7.py  longitudinalbench_poster_v8.py  longitudinalbench_poster_v8_FIXED_LAYOUT.py  minimal_poster_example.py  scty_poster.py  test.py
lib/: __init__.py  drawbot_design_system.py  drawbot_grid.py
machine/: repro.py
machine/machine/output/: temp_drawbot.py
mcp/: README.md  __init__.py  create_emotional_geometry.py  drawbot_mcp.py  test_client.py  test_dagger.py  test_dagger_simple.py
mcp/examples/: simple_composition.py
mcp/resources/: anthro-02.py  anthro.py  drawbotdoc.md
mcp/sandbox/: __init__.py  executor.py
scripts/: barbarian_ai_editorial.py  barbarian_ai_report_grid_v2.py  barbarian_editorial_enhanced.py  barbarian_editorial_simple.py  barbarian_editorial_zones.py  grid.py  grid_barbarian_report.py  grid_template_letter.py  layout_system.py  sample_report_generator.py
test/: e2b.py  study-fac.py  study-lin.py
tests/: __init__.py  test_design_system.py  test_evolutionary.py
