[project]
name = "drawbot-redux"
version = "0.1.0"
description = "Compositional design system for DrawBot with automatic typography enforcement"
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies only - what you need to run the design system
dependencies = [
    "pillow>=10.0.0",
    "fonttools>=4.50.0",
]

[project.optional-dependencies]
# Full DrawBot support (macOS only)
drawbot = [
    "drawbot",
    "drawbotgrid",
    "pyobjc>=11.0",
]

# MCP server for Claude Desktop integration
mcp = [
    "fastmcp>=2.10.6",
    "anthropic>=0.25.0",
]

# Font editing tools (optional, heavy)
fonts = [
    "booleanoperations>=0.9.0",
    "defcon>=0.12.1",
    "fontmath>=0.9.4",
    "fontparts",
    "fontpens",
    "mutatormath>=3.0.1",
    "ufo-extractor",
    "compositor",
]

# Development tools
dev = [
    "black>=25.1.0",
    "pytest>=8.0.0",
]

[tool.uv.sources]
drawbotgrid = { git = "https://github.com/mathieureguer/drawbotgrid" }
drawbot = { git = "https://github.com/typemytype/drawbot" }
fontparts = { git = "https://github.com/robotools/fontParts" }
fontpens = { git = "https://github.com/robotools/fontPens" }
compositor = { git = "https://github.com/robotools/compositor" }
ufo-extractor = { git = "https://github.com/robotools/extractor" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]

[tool.basedpyright]
extraPaths = ["lib"]
pythonVersion = "3.11"
